完善员工访客登录

--- a/manifest.json
+++ b/manifest.json
@@ -57,11 +57,11 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "wx87ae949aa9959677",
+        "appid" : "wx12e44dfd32c16b63",
         "setting" : {
             "urlCheck" : false,
-            "es6" : true,
-            "postcss" : true,
+            "es6" : false,
+            "postcss" : false,
             "minified" : true
         },
         "usingComponents" : true,
@@ -81,12 +81,14 @@
     },
     "h5" : {
         "devServer" : {
-            "proxy": {
-                "/piger": {
-                    "target": "http://4bkec15r.xiaomy.net",
-                    "changeOrigin": true,
-                    "secure": false,
-                    "pathRewrite": {"^/piger": ""}
+            "proxy" : {
+                "/piger" : {
+                    "target" : "http://4bkec15r.xiaomy.net",
+                    "changeOrigin" : true,
+                    "secure" : false,
+                    "pathRewrite" : {
+                        "^/piger" : ""
+                    }
                 }
             }
         },
